--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   flutter_barcode_scanner: ^2.0.0
   path_provider: ^2.1.0
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
